force scrollbar on body (fixes #99)

--- a/res/less/components/base.less
+++ b/res/less/components/base.less
@@ -36,6 +36,7 @@
 body {
     z-index: 1;
     position: relative;
+    overflow-y: scroll;
 }
 
 h1, h2, h3, h4, h5 {
